# Lucky-client

./: .env  .env.development  .env.production  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  stats.html  tsconfig.json  vite.config.ts
proto/: im_connect.proto
src/: App.vue  core.ts  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sql/: ChatsMapper.xml  FriendsMapper.xml  GroupMessageMapper.xml  SingleMessageMapper.xml  UserMapper.xml
src-tauri/src/: commands.rs  disk.rs  lib.rs  main.rs  tcp.rs  upload.rs
src/api/: index.ts
src/components/: index.ts
src/constants/: MessageCode.ts  index.ts
src/database/: index.ts
src/directive/: index.ts
src/docs/: RNNoise集成指南.md
src/hooks/: useAt.ts  useAudioPlayer.ts  useChatInput.ts  useDomPurify.ts  useEventBus.ts  useFFmpeg.ts  useFFmpeg_wasm.ts  useFile.ts  useFileTransfer.ts  useGlobalShortcut.ts  useIdleTaskExecutor.ts  useImageCache.ts  useLogger.ts  useMagnifier.ts  useMessageUpdate.ts  useNoiseSuppression.ts  useSqlite.ts  useStorageSpace.ts  useSystem.ts  useTauriEvent.ts  useThemeColor.ts  useTimeFormat.ts  useTray.ts  useUpdate.ts  useVirtualList.ts  useWatermark.ts  useWebRTC.ts  useWebSocketWorker.ts
src/i18n/: index.ts
src/layout/: index.vue
src/models/: index.ts
src/plugins/: index.ts
src/proto/: im_connect.ts
src/router/: index.ts
src/store/: index.ts
src/types/: auto-imports.d.ts  components.d.ts  env.d.ts  global.d.ts
src/utils/: Auth.ts  Log.ts  (+30 more)
(+179 files in other folders)
