[package]
name = "Lucky"
version = "0.1.0"
description = "IM App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "im_client_lib"
crate-type = ["lib", "cdylib", "staticlib"]


[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [
    "tray-icon",
    "image-png",
    "rustls-tls",
    "protocol-asset",
    "devtools",
    "unstable"
] }


tauri-plugin-process = "2.3.0"
tauri-plugin-updater = "2.9.0"
tauri-plugin-opener = "2.4.0"
tauri-plugin-shell = "2.2.2"
tauri-plugin-http = "2.4.4"
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-log = "2.5.0"
tauri-plugin-os = "2.2.2" 
tauri-plugin-upload = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-positioner = { version = "2.2.0", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
base64 = "0.21"
screenshots = "0.5.4"
enigo = "0.0.14"
image = "0.24.9"
sysinfo = "0.29"
sha2 = "0.10"
jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.2.1"


[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.2.0"
